--- a/package.json
+++ b/package.json
@@ -4,19 +4,40 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/boubouthai/bita.repo.git"
+    "dev": "parcel client/index.html",
+    "build": "rimraf dist && npm run build-client && npm run build-server",
+    "build-client": "parcel build client/index.html -d dist/client --public-url /dist",
+    "build-server": "parcel build server/entry-server.js -d dist/server --public-url /dist --target=node",
+    "start": "node dist/server/entry-server"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/boubouthai/bita.repo/issues"
-  },
-  "homepage": "https://github.com/boubouthai/bita.repo#readme",
   "dependencies": {
-    "parcel-bundler": "^1.7.1"
-  }
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.2",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.2",
+    "lodash": "^4.17.5",
+    "mongoose": "^5.0.12",
+    "vue": "^2.5.16",
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.5.16",
+    "vuetify": "^1.0.11"
+  },
+  "devDependencies": {
+    "@vue/component-compiler-utils": "^1.0.0",
+    "babel-eslint": "^8.0.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "eslint": "^4.13.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "less": "^3.0.1",
+    "parcel-bundler": "^1.7.0",
+    "rimraf": "^2.6.2"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
