--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "lodash": "^4.17.5",
+    "moment": "^2.22.1",
     "mongoose": "^5.0.12",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
