--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
+# env environment variables file
 .env
+yenv.yml
 
