--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "bita.export",
+  "name": "bi.auth",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "concurrently --names \"Server,Client\" -c \"bgBlue.bold,bgMagenta.bold\" \"npm run dev-server\" \"npm run dev-client\"",
-    "dev-client":"cross-env NODE_ENV=development && parcel client/index.html",
-    "dev-server":"cross-env NODE_ENV=development && nodemon server/entry-server.js",
+    "dev-client": "cross-env NODE_ENV=development && parcel client/index.html",
+    "dev-server": "cross-env NODE_ENV=development && nodemon server/entry-server.js",
     "build": "cross-env NODE_ENV=production rimraf dist && npm run build-client && npm run build-server",
     "build-client": "parcel build client/index.html -d dist/client --public-url /dist",
     "build-server": "parcel build server/entry-server.js -d dist/server --public-url /dist --target=node",
@@ -27,7 +27,6 @@
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
-    "vuetify": "^1.0.11",
     "yenv": "^2.1.0"
   },
   "devDependencies": {
